# vector-accumulator

./: CMakeLists.txt  README.md  plot.py
cmake/: ispc.cmake  simd.cpp
dot/: dot.hpp  dot.ispc  test.cpp
src/dot/: bench.cpp  dot.hpp  dot.ispc  test.cpp
src/minimum/: bench.cpp  minimum.hpp  minimum.ispc  test.cpp
